lab2/parser_debug_data/parser.out
Grammar:

Rule 0     S' -> instructions_opt
Rule 1     instructions_opt -> <empty>
Rule 2     instructions_opt -> instructions
Rule 3     instructions -> instruction
Rule 4     instructions -> instructions instruction
Rule 5     instruction -> assignment LINE_END
Rule 6     instruction -> FOR ID ASSIGN expr COLON expr instruction  [precedence=left, level=9]
Rule 7     instruction -> WHILE LPAREN expr RPAREN instruction
Rule 8     instruction -> IF LPAREN expr RPAREN instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF LPAREN expr RPAREN instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> LBRACE instructions RBRACE
Rule 11    instruction -> CONTINUE LINE_END
Rule 12    instruction -> BREAK LINE_END
Rule 13    instruction -> RETURN expr LINE_END
Rule 14    instruction -> PRINT elements LINE_END
Rule 15    assignment -> ID LBRACKET indexes RBRACKET assign expr
Rule 16    assignment -> ID assign expr
Rule 17    assign -> DIVASSIGN
Rule 18    assign -> MULASSIGN
Rule 19    assign -> SUBASSIGN
Rule 20    assign -> ADDASSIGN
Rule 21    assign -> ASSIGN
Rule 22    expr -> expr COLON expr  [precedence=left, level=9]
Rule 23    expr -> ID LBRACKET indexes RBRACKET
Rule 24    expr -> matrix
Rule 25    expr -> expr TRANSPOSE  [precedence=left, level=8]
Rule 26    expr -> MINUS expr  [precedence=right, level=7]
Rule 27    expr -> ONES LPAREN elements RPAREN
Rule 28    expr -> ZEROS LPAREN elements RPAREN
Rule 29    expr -> EYE LPAREN elements RPAREN
Rule 30    expr -> ID
Rule 31    expr -> STRING
Rule 32    expr -> FLOATNUM
Rule 33    expr -> INTNUM
Rule 34    expr -> LPAREN expr RPAREN
Rule 35    expr -> expr DOTDIV expr  [precedence=left, level=6]
Rule 36    expr -> expr DOTMUL expr  [precedence=left, level=6]
Rule 37    expr -> expr DOTSUB expr  [precedence=left, level=5]
Rule 38    expr -> expr DOTADD expr  [precedence=left, level=5]
Rule 39    expr -> expr DIVIDE expr  [precedence=left, level=6]
Rule 40    expr -> expr TIMES expr  [precedence=left, level=6]
Rule 41    expr -> expr MINUS expr  [precedence=left, level=5]
Rule 42    expr -> expr PLUS expr  [precedence=left, level=5]
Rule 43    expr -> expr GTE expr  [precedence=nonassoc, level=4]
Rule 44    expr -> expr LTE expr  [precedence=nonassoc, level=4]
Rule 45    expr -> expr GT expr  [precedence=nonassoc, level=4]
Rule 46    expr -> expr LT expr  [precedence=nonassoc, level=4]
Rule 47    expr -> expr NEQ expr  [precedence=nonassoc, level=3]
Rule 48    expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 49    matrix -> LBRACKET elements RBRACKET
Rule 50    elements -> expr
Rule 51    elements -> expr COMMA elements
Rule 52    indexes -> expr
Rule 53    indexes -> indexes RBRACKET LBRACKET expr
Rule 54    indexes -> indexes COMMA expr

Terminals, with rules where they appear:

ADDASSIGN            : 20
ASSIGN               : 6 21
BREAK                : 12
COLON                : 6 22
COMMA                : 51 54
CONTINUE             : 11
DIVASSIGN            : 17
DIVIDE               : 39
DOTADD               : 38
DOTDIV               : 35
DOTMUL               : 36
DOTSUB               : 37
ELSE                 : 8
EQ                   : 48
EYE                  : 29
FLOATNUM             : 32
FOR                  : 6
GT                   : 45
GTE                  : 43
ID                   : 6 15 16 23 30
IF                   : 8 9
INTNUM               : 33
LBRACE               : 10
LBRACKET             : 15 23 49 53
LINE_END             : 5 11 12 13 14
LPAREN               : 7 8 9 27 28 29 34
LT                   : 46
LTE                  : 44
MINUS                : 26 41
MULASSIGN            : 18
NEQ                  : 47
ONES                 : 27
PLUS                 : 42
PRINT                : 14
RBRACE               : 10
RBRACKET             : 15 23 49 53
RETURN               : 13
RPAREN               : 7 8 9 27 28 29 34
STRING               : 31
SUBASSIGN            : 19
TIMES                : 40
TRANSPOSE            : 25
WHILE                : 7
ZEROS                : 28
error                : 

Nonterminals, with rules where they appear:

assign               : 15 16
assignment           : 5
elements             : 14 27 28 29 49 51
expr                 : 6 6 7 8 9 13 15 16 22 22 25 26 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 50 51 52 53 54
indexes              : 15 23 53 54
instruction          : 3 4 6 7 8 8 9
instructions         : 2 4 10
instructions_opt     : 0
matrix               : 24


state 0

    (0) S' -> . instructions_opt
    (1) instructions_opt -> .
    (2) instructions_opt -> . instructions
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET indexes RBRACKET assign expr
    (16) assignment -> . ID assign expr
    $end            reduce using rule 1 (instructions_opt -> .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instructions_opt               shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4

state 1

    (0) S' -> instructions_opt .


state 2

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET indexes RBRACKET assign expr
    (16) assignment -> . ID assign expr
    $end            reduce using rule 2 (instructions_opt -> instructions .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instruction                    shift and go to state 14
    assignment                     shift and go to state 4

state 3

    (3) instructions -> instruction .
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    LBRACE          reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    RBRACE          reduce using rule 3 (instructions -> instruction .)


state 4

    (5) instruction -> assignment . LINE_END
    LINE_END        shift and go to state 15


state 5

    (6) instruction -> FOR . ID ASSIGN expr COLON expr instruction
    ID              shift and go to state 16


state 6

    (15) assignment -> ID . LBRACKET indexes RBRACKET assign expr
    (16) assignment -> ID . assign expr
    (17) assign -> . DIVASSIGN
    (18) assign -> . MULASSIGN
    (19) assign -> . SUBASSIGN
    (20) assign -> . ADDASSIGN
    (21) assign -> . ASSIGN
    LBRACKET        shift and go to state 17
    DIVASSIGN       shift and go to state 19
    MULASSIGN       shift and go to state 20
    SUBASSIGN       shift and go to state 21
    ADDASSIGN       shift and go to state 22
    ASSIGN          shift and go to state 23

    assign                         shift and go to state 18

state 7

    (7) instruction -> WHILE . LPAREN expr RPAREN instruction
    LPAREN          shift and go to state 24


state 8

    (8) instruction -> IF . LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> IF . LPAREN expr RPAREN instruction
    LPAREN          shift and go to state 25


state 9

    (10) instruction -> LBRACE . instructions RBRACE
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET indexes RBRACKET assign expr
    (16) assignment -> . ID assign expr
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instructions                   shift and go to state 26
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4

state 10

    (11) instruction -> CONTINUE . LINE_END
    LINE_END        shift and go to state 27


state 11

    (12) instruction -> BREAK . LINE_END
    LINE_END        shift and go to state 28


state 12

    (13) instruction -> RETURN . expr LINE_END
    (22) expr -> . expr COLON expr
    (23) expr -> . ID LBRACKET indexes RBRACKET
    (24) expr -> . matrix
    (25) expr -> . expr TRANSPOSE
    (26) expr -> . MINUS expr
    (27) expr -> . ONES LPAREN elements RPAREN
    (28) expr -> . ZEROS LPAREN elements RPAREN
    (29) expr -> . EYE LPAREN elements RPAREN
    (30) expr -> . ID
    (31) expr -> . STRING
    (32) expr -> . FLOATNUM
    (33) expr -> . INTNUM
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . expr DOTDIV expr
    (36) expr -> . expr DOTMUL expr
    (37) expr -> . expr DOTSUB expr
    (38) expr -> . expr DOTADD expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (43) expr -> . expr GTE expr
    (44) expr -> . expr LTE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr NEQ expr
    (48) expr -> . expr EQ expr
    (49) matrix -> . LBRACKET elements RBRACKET
    ID              shift and go to state 30
    MINUS           shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    STRING          shift and go to state 38
    FLOATNUM        shift and go to state 39
    INTNUM          shift and go to state 40
    LPAREN          shift and go to state 35
    LBRACKET        shift and go to state 31

    expr                           shift and go to state 29
    matrix                         shift and go to state 32

state 13

    (14) instruction -> PRINT . elements LINE_END
    (50) elements -> . expr
    (51) elements -> . expr COMMA elements
    (22) expr -> . expr COLON expr
    (23) expr -> . ID LBRACKET indexes RBRACKET
    (24) expr -> . matrix
    (25) expr -> . expr TRANSPOSE
    (26) expr -> . MINUS expr
    (27) expr -> . ONES LPAREN elements RPAREN
    (28) expr -> . ZEROS LPAREN elements RPAREN
    (29) expr -> . EYE LPAREN elements RPAREN
    (30) expr -> . ID
    (31) expr -> . STRING
    (32) expr -> . FLOATNUM
    (33) expr -> . INTNUM
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . expr DOTDIV expr
    (36) expr -> . expr DOTMUL expr
    (37) expr -> . expr DOTSUB expr
    (38) expr -> . expr DOTADD expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (43) expr -> . expr GTE expr
    (44) expr -> . expr LTE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr NEQ expr
    (48) expr -> . expr EQ expr
    (49) matrix -> . LBRACKET elements RBRACKET
    ID              shift and go to state 30
    MINUS           shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    STRING          shift and go to state 38
    FLOATNUM        shift and go to state 39
    INTNUM          shift and go to state 40
    LPAREN          shift and go to state 35
    LBRACKET        shift and go to state 31

    elements                       shift and go to state 41
    expr                           shift and go to state 42
    matrix                         shift and go to state 32

state 14

    (4) instructions -> instructions instruction .
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    LBRACE          reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    RBRACE          reduce using rule 4 (instructions -> instructions instruction .)


state 15

    (5) instruction -> assignment LINE_END .
    FOR             reduce using rule 5 (instruction -> assignment LINE_END .)
    WHILE           reduce using rule 5 (instruction -> assignment LINE_END .)
    IF              reduce using rule 5 (instruction -> assignment LINE_END .)
    LBRACE          reduce using rule 5 (instruction -> assignment LINE_END .)
    CONTINUE        reduce using rule 5 (instruction -> assignment LINE_END .)
    BREAK           reduce using rule 5 (instruction -> assignment LINE_END .)
    RETURN          reduce using rule 5 (instruction -> assignment LINE_END .)
    PRINT           reduce using rule 5 (instruction -> assignment LINE_END .)
    ID              reduce using rule 5 (instruction -> assignment LINE_END .)
    $end            reduce using rule 5 (instruction -> assignment LINE_END .)
    RBRACE          reduce using rule 5 (instruction -> assignment LINE_END .)
    ELSE            reduce using rule 5 (instruction -> assignment LINE_END .)


state 16

    (6) instruction -> FOR ID . ASSIGN expr COLON expr instruction
    ASSIGN          shift and go to state 43


state 17

    (15) assignment -> ID LBRACKET . indexes RBRACKET assign expr
    (52) indexes -> . expr
    (53) indexes -> . indexes RBRACKET LBRACKET expr
    (54) indexes -> . indexes COMMA expr
    (22) expr -> . expr COLON expr
    (23) expr -> . ID LBRACKET indexes RBRACKET
    (24) expr -> . matrix
    (25) expr -> . expr TRANSPOSE
    (26) expr -> . MINUS expr
    (27) expr -> . ONES LPAREN elements RPAREN
    (28) expr -> . ZEROS LPAREN elements RPAREN
    (29) expr -> . EYE LPAREN elements RPAREN
    (30) expr -> . ID
    (31) expr -> . STRING
    (32) expr -> . FLOATNUM
    (33) expr -> . INTNUM
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . expr DOTDIV expr
    (36) expr -> . expr DOTMUL expr
    (37) expr -> . expr DOTSUB expr
    (38) expr -> . expr DOTADD expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (43) expr -> . expr GTE expr
    (44) expr -> . expr LTE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr NEQ expr
    (48) expr -> . expr EQ expr
    (49) matrix -> . LBRACKET elements RBRACKET
    ID              shift and go to state 30
    MINUS           shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    STRING          shift and go to state 38
    FLOATNUM        shift and go to state 39
    INTNUM          shift and go to state 40
    LPAREN          shift and go to state 35
    LBRACKET        shift and go to state 31

    indexes                        shift and go to state 44
    expr                           shift and go to state 45
    matrix                         shift and go to state 32

state 18

    (16) assignment -> ID assign . expr
    (22) expr -> . expr COLON expr
    (23) expr -> . ID LBRACKET indexes RBRACKET
    (24) expr -> . matrix
    (25) expr -> . expr TRANSPOSE
    (26) expr -> . MINUS expr
    (27) expr -> . ONES LPAREN elements RPAREN
    (28) expr -> . ZEROS LPAREN elements RPAREN
    (29) expr -> . EYE LPAREN elements RPAREN
    (30) expr -> . ID
    (31) expr -> . STRING
    (32) expr -> . FLOATNUM
    (33) expr -> . INTNUM
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . expr DOTDIV expr
    (36) expr -> . expr DOTMUL expr
    (37) expr -> . expr DOTSUB expr
    (38) expr -> . expr DOTADD expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (43) expr -> . expr GTE expr
    (44) expr -> . expr LTE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr NEQ expr
    (48) expr -> . expr EQ expr
    (49) matrix -> . LBRACKET elements RBRACKET
    ID              shift and go to state 30
    MINUS           shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    STRING          shift and go to state 38
    FLOATNUM        shift and go to state 39
    INTNUM          shift and go to state 40
    LPAREN          shift and go to state 35
    LBRACKET        shift and go to state 31

    expr                           shift and go to state 46
    matrix                         shift and go to state 32

state 19

    (17) assign -> DIVASSIGN .
    ID              reduce using rule 17 (assign -> DIVASSIGN .)
    MINUS           reduce using rule 17 (assign -> DIVASSIGN .)
    ONES            reduce using rule 17 (assign -> DIVASSIGN .)
    ZEROS           reduce using rule 17 (assign -> DIVASSIGN .)
    EYE             reduce using rule 17 (assign -> DIVASSIGN .)
    STRING          reduce using rule 17 (assign -> DIVASSIGN .)
    FLOATNUM        reduce using rule 17 (assign -> DIVASSIGN .)
    INTNUM          reduce using rule 17 (assign -> DIVASSIGN .)
    LPAREN          reduce using rule 17 (assign -> DIVASSIGN .)
    LBRACKET        reduce using rule 17 (assign -> DIVASSIGN .)


state 20

    (18) assign -> MULASSIGN .
    ID              reduce using rule 18 (assign -> MULASSIGN .)
    MINUS           reduce using rule 18 (assign -> MULASSIGN .)
    ONES            reduce using rule 18 (assign -> MULASSIGN .)
    ZEROS           reduce using rule 18 (assign -> MULASSIGN .)
    EYE             reduce using rule 18 (assign -> MULASSIGN .)
    STRING          reduce using rule 18 (assign -> MULASSIGN .)
    FLOATNUM        reduce using rule 18 (assign -> MULASSIGN .)
    INTNUM          reduce using rule 18 (assign -> MULASSIGN .)
    LPAREN          reduce using rule 18 (assign -> MULASSIGN .)
    LBRACKET        reduce using rule 18 (assign -> MULASSIGN .)


state 21

    (19) assign -> SUBASSIGN .
    ID              reduce using rule 19 (assign -> SUBASSIGN .)
    MINUS           reduce using rule 19 (assign -> SUBASSIGN .)
    ONES            reduce using rule 19 (assign -> SUBASSIGN .)
    ZEROS           reduce using rule 19 (assign -> SUBASSIGN .)
    EYE             reduce using rule 19 (assign -> SUBASSIGN .)
    STRING          reduce using rule 19 (assign -> SUBASSIGN .)
    FLOATNUM        reduce using rule 19 (assign -> SUBASSIGN .)
    INTNUM          reduce using rule 19 (assign -> SUBASSIGN .)
    LPAREN          reduce using rule 19 (assign -> SUBASSIGN .)
    LBRACKET        reduce using rule 19 (assign -> SUBASSIGN .)


state 22

    (20) assign -> ADDASSIGN .
    ID              reduce using rule 20 (assign -> ADDASSIGN .)
    MINUS           reduce using rule 20 (assign -> ADDASSIGN .)
    ONES            reduce using rule 20 (assign -> ADDASSIGN .)
    ZEROS           reduce using rule 20 (assign -> ADDASSIGN .)
    EYE             reduce using rule 20 (assign -> ADDASSIGN .)
    STRING          reduce using rule 20 (assign -> ADDASSIGN .)
    FLOATNUM        reduce using rule 20 (assign -> ADDASSIGN .)
    INTNUM          reduce using rule 20 (assign -> ADDASSIGN .)
    LPAREN          reduce using rule 20 (assign -> ADDASSIGN .)
    LBRACKET        reduce using rule 20 (assign -> ADDASSIGN .)


state 23

    (21) assign -> ASSIGN .
    ID              reduce using rule 21 (assign -> ASSIGN .)
    MINUS           reduce using rule 21 (assign -> ASSIGN .)
    ONES            reduce using rule 21 (assign -> ASSIGN .)
    ZEROS           reduce using rule 21 (assign -> ASSIGN .)
    EYE             reduce using rule 21 (assign -> ASSIGN .)
    STRING          reduce using rule 21 (assign -> ASSIGN .)
    FLOATNUM        reduce using rule 21 (assign -> ASSIGN .)
    INTNUM          reduce using rule 21 (assign -> ASSIGN .)
    LPAREN          reduce using rule 21 (assign -> ASSIGN .)
    LBRACKET        reduce using rule 21 (assign -> ASSIGN .)


state 24

    (7) instruction -> WHILE LPAREN . expr RPAREN instruction
    (22) expr -> . expr COLON expr
    (23) expr -> . ID LBRACKET indexes RBRACKET
    (24) expr -> . matrix
    (25) expr -> . expr TRANSPOSE
    (26) expr -> . MINUS expr
    (27) expr -> . ONES LPAREN elements RPAREN
    (28) expr -> . ZEROS LPAREN elements RPAREN
    (29) expr -> . EYE LPAREN elements RPAREN
    (30) expr -> . ID
    (31) expr -> . STRING
    (32) expr -> . FLOATNUM
    (33) expr -> . INTNUM
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . expr DOTDIV expr
    (36) expr -> . expr DOTMUL expr
    (37) expr -> . expr DOTSUB expr
    (38) expr -> . expr DOTADD expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (43) expr -> . expr GTE expr
    (44) expr -> . expr LTE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr NEQ expr
    (48) expr -> . expr EQ expr
    (49) matrix -> . LBRACKET elements RBRACKET
    ID              shift and go to state 30
    MINUS           shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    STRING          shift and go to state 38
    FLOATNUM        shift and go to state 39
    INTNUM          shift and go to state 40
    LPAREN          shift and go to state 35
    LBRACKET        shift and go to state 31

    expr                           shift and go to state 47
    matrix                         shift and go to state 32

state 25

    (8) instruction -> IF LPAREN . expr RPAREN instruction ELSE instruction
    (9) instruction -> IF LPAREN . expr RPAREN instruction
    (22) expr -> . expr COLON expr
    (23) expr -> . ID LBRACKET indexes RBRACKET
    (24) expr -> . matrix
    (25) expr -> . expr TRANSPOSE
    (26) expr -> . MINUS expr
    (27) expr -> . ONES LPAREN elements RPAREN
    (28) expr -> . ZEROS LPAREN elements RPAREN
    (29) expr -> . EYE LPAREN elements RPAREN
    (30) expr -> . ID
    (31) expr -> . STRING
    (32) expr -> . FLOATNUM
    (33) expr -> . INTNUM
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . expr DOTDIV expr
    (36) expr -> . expr DOTMUL expr
    (37) expr -> . expr DOTSUB expr
    (38) expr -> . expr DOTADD expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (43) expr -> . expr GTE expr
    (44) expr -> . expr LTE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr NEQ expr
    (48) expr -> . expr EQ expr
    (49) matrix -> . LBRACKET elements RBRACKET
    ID              shift and go to state 30
    MINUS           shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 36
    EYE             shift and go to state 37
    STRING          shift and go to state 38
    FLOATNUM        shift and go to state 39
    INTNUM          shift and go to state 40
    LPAREN          shift and go to state 35
    LBRACKET        shift and go to state 31

    expr                           shift and go to state 48
    matrix                         shift and go to state 32

state 26

    (10) instruction -> LBRACE instructions . RBRACE
    (4) instructions -> instructions . instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET indexes RBRACKET assign expr
    (16) assignment -> . ID assign expr
    RBRACE          shift and go to state 49
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instruction                    shift and go to state 14
    assignment                     shift and go to state 4

state 27

    (11) instruction -> CONTINUE LINE_END .
    FOR             reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    WHILE           reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    IF              reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    LBRACE          reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    CONTINUE        reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    BREAK           reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    RETURN          reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    PRINT           reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    ID              reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    $end            reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    RBRACE          reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    ELSE            reduce using rule 11 (instruction -> CONTINUE LINE_END .)


state 28

    (12) instruction -> BREAK LINE_END .
    FOR             reduce using rule 12 (instruction -> BREAK LINE_END .)
    WHILE           reduce using rule 12 (instruction -> BREAK LINE_END .)
    IF              reduce using rule 12 (instruction -> BREAK LINE_END .)
    LBRACE          reduce using rule 12 (instruction -> BREAK LINE_END .)
    CONTINUE        reduce using rule 12 (instruction -> BREAK LINE_END .)
    BREAK           reduce using rule 12 (instruction -> BREAK LINE_END .)
    RETURN          reduce using rule 12 (instruction -> BREAK LINE_END .)
    PRINT           reduce using rule 12 (instruction -> BREAK LINE_END .)
    ID              reduce using rule 12 (instruction -> BREAK LINE_END .)
    $end            reduce using rule 12 (instruction -> BREAK LINE_END .)
    RBRACE          reduce using rule 12 (instruction -> BREAK LINE_END .)
    ELSE            reduce using rule 12 (instruction -> BREAK LINE_END .)


state 29

    (13) instruction -> RETURN expr . LINE_END
    (22) expr -> expr . COLON expr
    (25) expr -> expr . TRANSPOSE
    (35) expr -> expr . DOTDIV expr
    (36) expr -> expr . DOTMUL expr
    (37) expr -> expr . DOTSUB expr
    (38) expr -> expr . DOTADD expr
    (39) expr -> expr . DIVIDE expr
    (40) expr -> expr . TIMES expr
    (41) expr -> expr . MINUS expr
    (42) expr -> expr . PLUS expr
    (43) expr -> expr . GTE expr
    (44) expr -> expr . LTE expr
    (45) expr -> expr . GT expr
    (46) expr -> expr . LT expr
    (47) expr -> expr . NEQ expr
    (48) expr -> expr . EQ expr
    LINE_END        shift and go to state 50
    COLON           shift and go to state 51
    TRANSPOSE       shift and go to state 52
    DOTDIV          shift and go to state 53
    DOTMUL          shift and go to state 54
    DOTSUB          shift and go to state 55
    DOTADD          shift and go to state 56
    DIVIDE          shift and go to state 57
    TIMES           shift and go to state 58
    MINUS           shift and go to state 59
    PLUS            shift and go to state 60
    GTE             shift and go to state 61
    LTE             shift and go to state 62
    GT              shift and go to state 63
    LT              shift and go to state 64
    NEQ             shift and go to state 65
    EQ              shift and go to state 66


state 30

    (23) expr -> ID . LBRACKET indexes RBRACKET
    (30) expr -> ID .
    LBRACKET        shift and go to state 67
    LINE_END        reduce using rule 30 (expr -> ID .)
    COLON           reduce using rule 30 (expr -> ID .)
    TRANSPOSE       reduce using rule 30 (expr -> ID .)
    DOTDIV          reduce using rule 30 (expr -> ID .)
    DOTMUL          reduce using rule 30 (expr -> ID .)
    DOTSUB          reduce using rule 30 (expr -> ID .)
    DOTADD          reduce using rule 30 (expr -> ID .)
    DIVIDE          reduce using rule 30 (expr -> ID .)
    TIMES           reduce using rule 30 (expr -> ID .)
    MINUS           reduce using rule 30 (expr -> ID .)
    PLUS            reduce using rule 30 (expr -> ID .)
    GTE             reduce using rule 30 (expr -> ID .)
    LTE             reduce using rule 30 (expr -> ID .)
    GT              reduce using rule 30 (expr -> ID .)
    LT              reduce using rule 30 (expr -> ID .)
    NEQ             reduce using rule 30 (expr -> ID .)
    EQ              reduce using rule 30 (expr -> ID .)
    COMMA           reduce using rule 30 (expr -> ID .)
    RBRACKET        reduce using rule 30 (expr -> ID .)
    RPAREN          reduce using rule 30 (expr -> ID .)
    FOR             reduce using rule 30 (expr -> ID .)
    WHILE           reduce using rule 30 (expr -> ID .)
    IF              reduce using rule 30 (expr -> ID .)
    LBRACE          reduce using rule 30 (expr -> ID .)
    CONTINUE        reduce using rule 30 (expr -> ID .)
    BREAK           reduce using rule 30 (expr -> ID .)
    RETURN          reduce using rule 30 (expr -> ID .)
    PRINT           reduce using rule 30 (expr -> ID .)
    ID              reduce using rule 30 (expr -> ID .)


state 31
